# hectarus_simulation

./: README.md  package.xml
launch/: sim.launch.py
ros_ws/src/hectarus_controller/: package.xml  setup.cfg  setup.py
ros_ws/src/hectarus_controller/hectarus_controller/: gazebo_joint_publisher.py  hectarus_imu_data.py  hectarus_teleop_key.py  hectarus_torque_data.py
ros_ws/src/hectarus_controller/launch/: controller.launch.py  torque.launch.py
ros_ws/src/hectarus_sim/: CMakeLists.txt
ros_ws/src/hectarus_sim/config/: hectarus_controller.yaml
ros_ws/src/hectarus_sim/description/: hectarus_core.xacro  hectarus_gazebo.xacro
ros_ws/src/hectarus_sim/description/meshes/: base_link.stl  coxa1_link.stl  coxa2_link.stl  coxa3_link.stl  coxa4_link.stl  coxa5_link.stl  coxa6_link.stl  end_effector3.stl  femur2_link.stl  femur4_link.stl  tibia1_link.stl  tibia2_link.stl  tibia3_link.stl  tibia4_link.stl  tibia5_link.stl
ros_ws/src/hectarus_sim/world/: stairs.sdf  world_init.sdf
