<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hectarus_sim</name>
  <version>0.0.0</version>
  <description>hectarus</description>
  <maintainer email="vincentricardo91@gmail.com">cent</maintainer>
  <license>Apache-2.0</license>

  <depend>ros_gz</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
 
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
